--- a/style.css
+++ b/style.css
@@ -1,13 +1,60 @@
 body{
     margin:0;
     overflow: hidden;
+    height: 100%;
+    font-family: 'Fredoka One', cursive;
+    letter-spacing: 2px;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 #game{
     height: 90vh;
-    width: 90%;
+    width: 100%;
     margin: auto;
 }
+#score-bar{
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    width: 400px;
+    height: 100px;
+    margin-left: 50px;
+}
+#coins{
+    color:gold;
+    font-size: 40px;
+}
+#level{
+    color: gold;
+    font-size: 40px;
+}
+
 #demo{
     height: 200px;
     width: 200px;
+}
+
+.hidden{
+    display: none !important;
+}
+
+.win{
+    color: white;
+    position: absolute;
+    left:50%;
+    top: 50%;
+    width: 500px;
+    height: 200px;
+    margin-left: -250px;
+    margin-top: -200px;
+    background-color: rgba(0, 0, 0, 0.295);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
 }
