--- a/style.css
+++ b/style.css
@@ -13,24 +13,24 @@ body{
 }
 #game{
     height: 90vh;
-    width: 100%;
+    width: 100vw;
     margin: auto;
 }
 #score-bar{
     display: flex;
-    justify-content:space-between;
+    justify-content:start;
     align-items: center;
-    width: 400px;
-    height: 100px;
-    margin-left: 50px;
+    width: 100%;
+    height: 10vh;
+    padding-left: 50px;
 }
 #coins{
     color:gold;
-    font-size: 40px;
+    font-size: 20px;
 }
 #level{
     color: gold;
-    font-size: 40px;
+    font-size: 20px;
 }
 
 #demo{
@@ -47,10 +47,10 @@ body{
     position: absolute;
     left:50%;
     top: 50%;
-    width: 500px;
-    height: 200px;
-    margin-left: -250px;
-    margin-top: -200px;
+    width: 40%;
+    height: 30%;
+    margin-left: -20%;
+    margin-top: -40%;
     background-color: rgba(0, 0, 0, 0.295);
     display: flex;
     flex-direction: column;
