mobile scroll disable fix3

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
     font-family: 'Fredoka One', cursive;
     letter-spacing: 2px;
     overflow: hidden;
-    position: relative;
+    position: fixed;
 }
 
 html{
