--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
     letter-spacing: 2px;
     overflow: hidden;
     position: fixed;
+    width: 100%;
 }
 
 html{
@@ -26,6 +27,8 @@ html{
 .container{
     position: relative;
     margin: auto;
+    width: 100%;
+    height: 100%;
     max-width: 1200px;
     max-height: 1000px;
 }
@@ -58,9 +61,11 @@ html{
 }
 
 .menu{
-    color: gold;
     position: absolute;
+    font-size: 1.3em;
+    color: gold;
     left:15%;
+    min-height: 300px;
     top: 30vh;
     bottom: 40vh;
     right: 15%;
@@ -74,10 +79,12 @@ html{
 }
 
 #menu-button{
-    margin-top: 20%;
+    margin-top: 10%;
     padding: 5%;
     border-radius: 5%;
     font-family: 'Fredoka One', cursive;
+    background-color: black;
+    font-size: 1.3em;
     letter-spacing: 2px;
     color: gold;
 }
