--- a/style.css
+++ b/style.css
@@ -46,19 +46,23 @@ html{
     align-items: center;
 }
 #coins{
-    color:gold;
+    color:hsl(50, 100%, 50%);
     font-size: 20px;
     padding-right: 20px;
 }
 #level{
-    color: gold;
+    color: rgb(255, 213, 0);
     font-size: 20px;
     padding-right: 20px;
 }
 
-#demo{
-    height: 200px;
-    width: 200px;
+#wallBreaker{
+    background-image: url(WallBreaker.png);
+    background-position: center;
+    background-size: cover;
+    width: 50px;
+    height: 50px;
+    border: none;
 }
 
 .hidden{
@@ -91,7 +95,7 @@ html{
     background-color: black;
     font-size: 1.3em;
     letter-spacing: 2px;
-    color: gold;
+    color: hsl(51, 100%, 50%);
 }
 
 @media (max-width: 600px){
