--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ html{
 
 #wallBreaker{
     background-image: url(WallBreaker.png);
+    background-color: transparent;
     background-position: center;
     background-size: cover;
     width: 50px;
@@ -76,8 +77,19 @@ html{
 
 #addTime{
     background-image: url(TimeAdd.png);
+    background-color: transparent;
     background-position: center;
     background-size: cover;
+    width: 50px;
+    height: 50px;
+    border: none;
+}
+
+#addMoney{
+    background-image: url(MoneyAdd.png);
+    background-position: center;
+    background-size: cover;
+    background-color: transparent;
     width: 50px;
     height: 50px;
     border: none;
