--- a/style.css
+++ b/style.css
@@ -29,8 +29,6 @@ html{
     margin: auto;
     width: 100%;
     height: 100%;
-    max-width: 1200px;
-    max-height: 1000px;
 }
 #score-bar{
     display: flex;
@@ -46,19 +44,18 @@ html{
     align-items: center;
 }
 #coins{
-    color:hsl(50, 100%, 50%);
+    color:hsl(50, 100%, 60%);
     font-size: 20px;
     padding-right: 20px;
 }
 #level{
-    color: rgb(255, 213, 0);
+    color: hsl(50, 100%, 60%);
     font-size: 20px;
     padding-right: 20px;
 }
 #timer{
-    background-color: rgb(255, 213, 0);
+    background-color: hsl(50, 100%, 60%);
     width: 100%;
-    top:89vh;
     height: 10px;
     position: absolute;
 }
@@ -68,7 +65,6 @@ html{
 }
 
 #wallBreaker{
-    background-image: url(WallBreaker.png);
     background-color: transparent;
     background-position: center;
     background-size: cover;
@@ -78,7 +74,6 @@ html{
 }
 
 #addTime{
-    background-image: url(TimeAdd.png);
     background-color: transparent;
     background-position: center;
     background-size: cover;
@@ -88,7 +83,6 @@ html{
 }
 
 #addMoney{
-    background-image: url(MoneyAdd.png);
     background-position: center;
     background-size: cover;
     background-color: transparent;
@@ -105,11 +99,11 @@ html{
     position: absolute;
     font-size: 1.3em;
     color: gold;
-    left:15%;
+    left:10%;
     min-height: 300px;
-    top: 20vh;
-    bottom: 50vh;
-    right: 15%;
+    top: 20%;
+    bottom: 30%;
+    right: 10%;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.644);
     display: flex;
