--- a/style.css
+++ b/style.css
@@ -62,6 +62,30 @@ html{
 
 #shop{
     margin-left: auto;
+    display: flex;
+}
+
+.shop-item{
+    margin-left: 15px;
+    width: 50px;
+    height: 50px;
+    position: relative;
+}
+
+.shop-item-cost{
+    position: absolute;
+    color: hsl(50, 100%, 60%);
+    font-size: 10px;
+    right: 0px;
+    bottom: 0px;
+}
+
+.shop-item-lvl{
+    position: absolute;
+    color: hsl(50, 100%, 60%);
+    font-size: 10px;
+    left: 0px;
+    bottom: 0px;
 }
 
 #wallBreaker{
