--- a/style.css
+++ b/style.css
@@ -75,17 +75,24 @@ html{
 .shop-item-cost{
     position: absolute;
     color: hsl(50, 100%, 60%);
-    font-size: 10px;
-    right: 0px;
-    bottom: 0px;
+    padding: 2px;
+    border-radius: 1px;
+    font-size: 12px;
+    left: 0%;
+    text-align: center;
+    width: 50px;
+    bottom: -5px;
 }
 
 .shop-item-lvl{
     position: absolute;
     color: hsl(50, 100%, 60%);
-    font-size: 10px;
-    left: 0px;
-    bottom: 0px;
+    font-size: 12px;
+    padding: 2px;
+    border-radius: 1px;
+
+    left: -5px;
+    top: -5px;
 }
 
 #wallBreaker{
