--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     overflow: hidden;
     position: fixed;
     width: 100%;
+    background-color: black;
 }
 
 html{
@@ -29,6 +30,7 @@ html{
     margin: auto;
     width: 100%;
     height: 100%;
+    max-width: 1000px;
 }
 #score-bar{
     display: flex;
