--- a/styles/main.css
+++ b/styles/main.css
@@ -22,11 +22,6 @@ html {
           box-sizing: border-box;
 }
 
-#game {
-  height: 90%;
-  width: 100%;
-}
-
 .container {
   position: relative;
   margin: auto;
@@ -35,7 +30,68 @@ html {
   max-width: 1000px;
 }
 
-#score-bar {
+.container #game {
+  height: 90%;
+  width: 100%;
+}
+
+.container .menu {
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  position: absolute;
+  font-size: 1.3em;
+  color: gold;
+  left: 0;
+  min-height: 300px;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.644);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 1;
+}
+
+.container .menu #menu-button {
+  margin-top: 10%;
+  padding: 5%;
+  border-radius: 5%;
+  font-family: 'Fredoka One', cursive;
+  background-color: black;
+  font-size: 1.3em;
+  letter-spacing: 2px;
+  color: #ffd900;
+}
+
+.container #timer-back {
+  background-color: #998000;
+  width: 100%;
+  height: 10px;
+  position: absolute;
+  z-index: 1;
+}
+
+.container #timer {
+  background-color: #ffdd33;
+  width: 100%;
+  height: 10px;
+  z-index: 2;
+  position: absolute;
+}
+
+.container #score-bar {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -50,18 +106,7 @@ html {
   padding: 10px;
 }
 
-#reset {
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  color: #ffdd33;
-  background-color: black;
-  font-family: 'Fredoka One', cursive;
-}
-
-#stats {
+.container #score-bar #stats {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -73,49 +118,33 @@ html {
           align-items: center;
 }
 
-#coins {
+.container #score-bar #stats #coins {
   color: #ffdd33;
   font-size: 20px;
   padding-right: 20px;
 }
 
-#level {
+.container #score-bar #stats #level {
   color: #ffdd33;
   font-size: 20px;
   padding-right: 20px;
 }
 
-#timer-back {
-  background-color: #998000;
-  width: 100%;
-  height: 10px;
-  position: absolute;
-  z-index: 1;
-}
-
-#timer {
-  background-color: #ffdd33;
-  width: 100%;
-  height: 10px;
-  z-index: 2;
-  position: absolute;
-}
-
-#shop {
+.container #score-bar #shop {
   margin-left: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.shop-item {
+.container #score-bar #shop .shop-item {
   margin-left: 15px;
   width: 50px;
   height: 50px;
   position: relative;
 }
 
-.shop-item-cost {
+.container #score-bar #shop .shop-item .shop-item-cost {
   position: absolute;
   color: #ffdd33;
   padding: 2px;
@@ -127,7 +156,7 @@ html {
   bottom: -5px;
 }
 
-.shop-item-lvl {
+.container #score-bar #shop .shop-item .shop-item-lvl {
   position: absolute;
   color: #ffdd33;
   font-size: 12px;
@@ -135,6 +164,17 @@ html {
   border-radius: 1px;
   left: -5px;
   top: -5px;
+}
+
+#reset {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  color: #ffdd33;
+  background-color: black;
+  font-family: 'Fredoka One', cursive;
 }
 
 #wallBreaker {
@@ -166,44 +206,6 @@ html {
 
 .hidden {
   display: none !important;
-}
-
-.menu {
-  position: absolute;
-  font-size: 1.3em;
-  color: gold;
-  left: 10%;
-  min-height: 300px;
-  top: 20%;
-  bottom: 30%;
-  right: 10%;
-  text-align: center;
-  background-color: rgba(0, 0, 0, 0.644);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  z-index: 1;
-}
-
-#menu-button {
-  margin-top: 10%;
-  padding: 5%;
-  border-radius: 5%;
-  font-family: 'Fredoka One', cursive;
-  background-color: black;
-  font-size: 1.3em;
-  letter-spacing: 2px;
-  color: #ffd900;
 }
 
 @media (max-width: 600px) {
